# MotrixLabRobotArm

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  .readthedocs.yaml  CLAUDE.md  NOTICE  README.md  README.zh-CN.md  ReadMe_RobotArm.md  pyproject.toml  ruff.toml  uv.toml
docs/: CLAUDE.md  gen_poster.sh
docs/source/: conf.py
docs/source/_static/js/: custom.js
docs/source/en/: index.md
docs/source/en/user_guide/: index.md
docs/source/zh_CN/: index.md
docs/source/zh_CN/user_guide/: index.md
motrix_envs/: README.md  pyproject.toml
motrix_envs/src/motrix_envs/: __init__.py  base.py  registry.py
motrix_envs/src/motrix_envs/basic/: __init__.py
motrix_envs/src/motrix_envs/basic/cartpole/: __init__.py  cartpole.xml  cartpole_np.py  cfg.py
motrix_envs/src/motrix_envs/basic/walker/: __init__.py  cfg.py  walker.xml  walker_np.py
motrix_envs/src/motrix_envs/common/: materials.xml
motrix_envs/src/motrix_envs/locomotion/: __init__.py
motrix_envs/src/motrix_envs/locomotion/go1/: __init__.py  cfg.py  walk_np.py
motrix_envs/src/motrix_envs/locomotion/go1/xmls/: go1_motor_actuator.xml  scene_motor_actuator.xml
motrix_envs/src/motrix_envs/manipulation/: __init__.py
motrix_envs/src/motrix_envs/manipulation/panda/: __init__.py  cfg.py  cfg_reward.py  compte_reach_only.py  compute_common.py  compute_grasp_lift.py  compute_reach_grasp.py  compute_reach_grasp_transport.py  compute_with_phases.py  drop_functions.py  pick_place_np.py  pick_place_np_scripted.py  pick_place_reward_np.py  reward_functions.py
motrix_envs/src/motrix_envs/manipulation/panda/xmls/: mjx_panda.xml  panda_scene_pickplace.xml
motrix_envs/src/motrix_envs/np/: env.py  renderer.py  reward.py
motrix_rl/: README.md  pyproject.toml
motrix_rl/src/motrix_rl/: __init__.py  base.py  cfgs.py  registry.py  utils.py
motrix_rl/src/motrix_rl/skrl/: __init__.py  cfg.py
motrix_rl/src/motrix_rl/skrl/jax/: __init__.py  wrap_np.py
motrix_rl/src/motrix_rl/skrl/jax/train/: ppo.py
motrix_rl/src/motrix_rl/skrl/torch/: __init__.py  wrap_np.py
motrix_rl/src/motrix_rl/skrl/torch/train/: ppo.py
scripts/: gpu_utils.py  play.py  train.py  view.py
(+20 files in other folders)
